--- a/static/examples/webgl-practice-learn/draw-triangle.html
+++ b/static/examples/webgl-practice-learn/draw-triangle.html
@@ -42,9 +42,11 @@
 
       // 绘制顶点着色器、片元着色器
       const gl = webglInit();
-      // 创建顶点着色器 语法 gl.createShader(type) 此处 type 为枚举型值为 gl.VERTEX_SHADER 或 gl.FRAGMENT_SHADER 两者中的一个
+      // 创建顶点着色器，语法 gl.createShader(type)
+      // 此处 type 为枚举型值为 gl.VERTEX_SHADER 或 gl.FRAGMENT_SHADER 两者中的一个
       const vShader = gl.createShader(gl.VERTEX_SHADER);
-      // 编写顶点着色器的 GLSL 代码 语法 gl.shaderSource(shader, source); shader - 用于设置程序代码的 webglShader（着色器对象) source - 包含 GLSL 程序代码的字符串
+      // 编写顶点着色器的 GLSL 代码，语法 gl.shaderSource(shader, source)
+      // shader - 用于设置程序代码的 webglShader（着色器对象）source - 包含 GLSL 程序代码的字符串
       gl.shaderSource(
         vShader,
         `
@@ -79,11 +81,11 @@
       const color = gl.getUniformLocation(program, 'f_color'); // 获取 f_color 变量位置
       gl.uniform4f(color, 0.93, 0, 0.56, 1); // 设置它的值
       const position = gl.getAttribLocation(program, 'v_position'); // 获取 v_position 位置
-      const pBuffer = gl.createBuffer(); // 创建一个顶点缓冲对象，返回其 id，用来放三角形顶点数据，
+      const pBuffer = gl.createBuffer(); // 创建一个顶点缓冲对象，返回其 id，用来放三角形顶点数据
       gl.bindBuffer(gl.ARRAY_BUFFER, pBuffer); // 将这个顶点缓冲对象绑定到 gl.ARRAY_BUFFER 后续对 gl.ARRAY_BUFFER 的操作都会映射到这个缓存
       gl.bufferData(
         gl.ARRAY_BUFFER,
-        new Float32Array([0, 0.5, 0.5, 0, -0.5, -0.5]), // 三角形的三个顶点  因为会将数据发送到 GPU，为了省去数据解析，这里使用 Float32Array 直接传送数据
+        new Float32Array([0, 0.5, 0.5, 0, -0.5, -0.5]), // 三角形的三个顶点，因为会将数据发送到 GPU，为了省去数据解析，这里使用 Float32Array 直接传送数据
         gl.STATIC_DRAW
       ); // 表示缓冲区的内容不会经常更改
       // 将顶点数据加入的刚刚创建的缓存对象
@@ -93,14 +95,14 @@
         2, // 组成数量，必须是 1，2，3 或 4。我们只提供了 x 和 y
         gl.FLOAT, // 每个元素的数据类型
         false, // 是否归一化到特定的范围，对 FLOAT 类型数据设置无效
-        0, // stride 步长 数组中一行长度，0 表示数据是紧密的没有空隙，让 OpenGL 决定具体步长
+        0, // stride 步长，数组中一行长度，0 表示数据是紧密的没有空隙，让 OpenGL 决定具体步长
         0 // offset 字节偏移量，必须是类型的字节长度的倍数。
       );
-      gl.enableVertexAttribArray(position);
-      // 开启 attribute 变量额，使顶点着色器能够访问缓冲区数据
+      gl.enableVertexAttribArray(position); // 开启 attribute 变量，使顶点着色器能够访问缓冲区数据
       gl.clearColor(0, 1, 1, 1); // 设置清空颜色缓冲时的颜色值
       gl.clear(gl.COLOR_BUFFER_BIT); // 清空颜色缓冲区，也就是清空画布
-      // 语法 gl.drawArrays(mode, first, count); mode - 指定绘制图元的方式 first - 指定从哪个点开始绘制 count - 指定绘制需要使用到多少个点
+      // 语法：gl.drawArrays(mode, first, count);
+      // mode - 指定绘制图元的方式 first - 指定从哪个点开始绘制 count - 指定绘制需要使用到多少个点
       gl.drawArrays(gl.TRIANGLES, 0, 3);
     </script>
   </body>
