feat: 更新编辑器

--- a/static/examples/webgl-fundamental-base-concept/draw-colorful-triangle/index.html
+++ b/static/examples/webgl-fundamental-base-concept/draw-colorful-triangle/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link type="text/css"
-    href="https://blog.towavephone.com/examples/webgl-fundamental-base-concept/resources/webgl-tutorials.css"
+    href="./resources/webgl-tutorials.css"
     rel="stylesheet" />
   <link type="text/css" href="./index.css" rel="stylesheet" />
 </head>
@@ -58,10 +58,10 @@
   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
   for webgl-utils, m3, m4, and webgl-lessons-ui.
   -->
-  <script src="https://blog.towavephone.com/examples/webgl-fundamental-base-concept/resources/webgl-utils.js"></script>
+  <script src="./resources/webgl-utils.js"></script>
   <script
-    src="https://blog.towavephone.com/examples/webgl-fundamental-base-concept/resources/webgl-lessons-ui.js"></script>
-  <script src="https://blog.towavephone.com/examples/webgl-fundamental-base-concept/resources/m3.js"></script>
+    src="./resources/webgl-lessons-ui.js"></script>
+  <script src="./resources/m3.js"></script>
   <script src="./index.js"></script>
 
 </body>
