--- a/static/examples/webgl-fundamental-base-concept/webgl-2d-rectangle-with-random-colors/index.html
+++ b/static/examples/webgl-fundamental-base-concept/webgl-2d-rectangle-with-random-colors/index.html
@@ -24,6 +24,7 @@
   <!-- vertex shader -->
   <script id="vertex-shader-2d" type="x-shader/x-vertex">
     attribute vec2 a_position;
+    attribute vec4 a_color;
 
     uniform mat3 u_matrix;
 
@@ -33,10 +34,8 @@
       // Multiply the position by the matrix.
       gl_Position = vec4((u_matrix * vec3(a_position, 1)).xy, 0, 1);
 
-      // Convert from clipspace to colorspace.
-      // Clipspace goes -1.0 to +1.0
-      // Colorspace goes from 0.0 to 1.0
-      v_color = gl_Position * 0.5 + 0.5;
+      // Copy the color from the attribute to the varying.
+      v_color = a_color;
     }
   </script>
   <!-- fragment shader -->
