--- a/static/examples/css-new-world-detailed-style-performance/transform-overflow-absolute/index.html
+++ b/static/examples/css-new-world-detailed-style-performance/transform-overflow-absolute/index.html
@@ -40,12 +40,12 @@
     <div class="demo">
       <h4>默认，图片不会被溢出隐藏</h4>
       <p>
-        <img src="./images/1.jpg" />
+        <img src="/GATSBY_PUBLIC_DIR/images/1.jpg" />
       </p>
 
       <h4>容器设置 transform: scale(1)</h4>
       <p class="transform">
-        <img src="./images/1.jpg" />
+        <img src="/GATSBY_PUBLIC_DIR/images/1.jpg" />
       </p>
     </div>
   </body>
