--- a/static/examples/css-new-world-detailed-style-performance/transform-absolute/index.html
+++ b/static/examples/css-new-world-detailed-style-performance/transform-absolute/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="demo">
       <p>
-        <img src="./images/1.jpg" />
+        <img src="/GATSBY_PUBLIC_DIR/images/1.jpg" />
       </p>
     </div>
   </body>
