fix: 修复webgl图像加载错误

--- a/static/examples/webgl-fundamental-image-processing/webgl-2d-image-blend/index.html
+++ b/static/examples/webgl-fundamental-image-processing/webgl-2d-image-blend/index.html
@@ -72,6 +72,7 @@
     function main() {
       var image = new Image();
       image.src = '/GATSBY_PUBLIC_DIR/images/leaves.jpg'; // MUST BE SAME DOMAIN!!!
+      image.crossOrigin = 'anonymous';
       image.onload = function() {
         render(image);
       };
