--- a/static/examples/webgl-fundamental-image-processing/webgl-2d-image-red2blue/index.html
+++ b/static/examples/webgl-fundamental-image-processing/webgl-2d-image-red2blue/index.html
@@ -64,6 +64,7 @@
     function main() {
       var image = new Image();
       image.src = '/GATSBY_PUBLIC_DIR/images/leaves.jpg'; // MUST BE SAME DOMAIN!!!
+      image.crossOrigin = 'anonymous';
       image.onload = function() {
         render(image);
       };
