--- a/static/examples/three-js-practice-test/test-18/index.html
+++ b/static/examples/three-js-practice-test/test-18/index.html
@@ -9,8 +9,11 @@
   </head>
 
   <body>
-    <canvas id="c1"></canvas>
-    <canvas id="c2"></canvas>
+    <canvas id="c"></canvas>
+    <div class="split">
+      <div id="view1" tabindex="1"></div>
+      <div id="view2" tabindex="2"></div>
+    </div>
     <script async src="./build/es-module-shims.js"></script>
     <script type="importmap">
       {
