--- a/static/examples/three-js-practice-test/test-28/index.html
+++ b/static/examples/three-js-practice-test/test-28/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js - Shadows - Spot Light w/CameraHelper</title>
+    <title>Three.js - Custom BufferGeometry - Cube</title>
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
 
